entity_macros/tests/ui/derive/ent/empty-ent-attr.stderr
error: Not enough items within ent(...)
  --> $DIR/empty-ent-attr.rs:11:5
   |
11 |     #[ent()]
   |     ^
